2.81 cycles viewport crash when adding hdri (optix) #71123

Closed
opened 2019-10-26 22:55:31 +02:00 by HF · 7 comments

System Information
Operating system: win 10
Graphics card: rtx 2070 super

Blender Version
Broken: blender-2.81-7137d89daaae
Worked: 2.8

cuda works fine, only optix has this problem
when in cycles rendered viewport, connecting a hdri will crash the viewport. if connect hdri before switching to cycles viewport it will not crash

Exact steps for others to reproduce the error
switch to optix
go into cycles rendered viewport
import an hdri
connect the hdri while in cycles viewport

**System Information** Operating system: win 10 Graphics card: rtx 2070 super **Blender Version** Broken: blender-2.81-7137d89daaae Worked: 2.8 cuda works fine, only optix has this problem when in cycles rendered viewport, connecting a hdri will crash the viewport. if connect hdri before switching to cycles viewport it will not crash **Exact steps for others to reproduce the error** switch to optix go into cycles rendered viewport import an hdri connect the hdri while in cycles viewport
Author

Added subscriber: @Hongyu

Added subscriber: @Hongyu
Patrick Mours self-assigned this 2019-10-28 15:45:48 +01:00

Added subscriber: @mano-wii

Added subscriber: @mano-wii

I suppose @pmoursnv could reproduce the problem so I'm putting it as a medium priority.

I suppose @pmoursnv could reproduce the problem so I'm putting it as a medium priority.
Member

Yes, got a fix pending here: D6141.

Yes, got a fix pending here: [D6141](https://archive.blender.org/developer/D6141).

This issue was referenced by blender/cycles@a94eb3f554

This issue was referenced by blender/cycles@a94eb3f554b4e923e70e0aec0c8c84de90e117b5

This issue was referenced by b45828ebe9

This issue was referenced by b45828ebe9c6e729c5d65bb23f913088f3f8672c
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#71123
No description provided.